# fs-lib

./: .gitignore  Makefile  go.mod  go.sum
.github/workflows/: build_main_daemon.yaml  build_main_proxy.yaml  publish_daemon.yaml  publish_golangwatcher.yaml  publish_proxy.yaml  publish_rustwatcher.yaml
docker/: Dockerfile.daemon  Dockerfile.golang  Dockerfile.proxy  Dockerfile.rustwatcher.amd64  Dockerfile.rustwatcher.arm64
hack/: update-codegen.sh
infra/develop_container/: Dockerfile-base  build_base.sh  deploy.sh
jfsnotify/: backend_jfs.go  backend_jfs_test.go  fsnotify.go  ipc.go  utils.go  utils_test.go
jfsnotify/cmd/: env.sh  example.go
k8s/cmd/fsnotify-daemon/: main.go
k8s/cmd/fsnotify-daemon/app/: app.go
k8s/cmd/fsnotify-daemon/app/v2/: app.go
k8s/cmd/fsnotify-proxy/: main.go
k8s/cmd/fsnotify-proxy/app/: app.go  helper.go
k8s/pkg/apis/sys/v1alpha1/: doc.go  register.go  types.go  zz_generated.deepcopy.go
k8s/pkg/fswatchers/v1alpha1/: controller.go
k8s/pkg/ipc/: client.go
k8s/pkg/multicast/: server.go  subscriber.go  tcpserver.go
k8s/pkg/producer/: interface.go  redis.go  types.go
rust-jfs/: Cargo.toml
rust-jfs/docs/: fsnotify-daemon.md  fsnotify-proxy.md  jfswatcher-flow.md
rust-jfs/examples/: basic_usage.rs  temp.yaml
rust-jfs/src/: common.rs  errors.rs  event.rs  ipc.rs  lib.rs  utils.rs  watcher.rs
rust-jfs/tests/: integration_tests.rs
rustjfssecond/: Cargo.toml
rustjfssecond/src/: main.rs
