[package]
name = "rust-jfs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust implementation of JFS file system watcher"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"
ipc-channel = "0.18"
url = "2.4"
